--- a/app/views/post_comments/_index.html.erb
+++ b/app/views/post_comments/_index.html.erb
@@ -3,25 +3,25 @@
 
     <div class="row">
       <div class ="col-md-8">
-        <div class="comment-date">コメント：<%= l comment.created_at %>
+        <div class="comment-date">コメント：<%= l comment.created_at %>　
+          <%= link_to "#{comment.user.nick_name}", user_path(comment.user.id) %>
         </div>
         <div class="row">
           <div class ="col-md-2 text-center">
             <div>
               <%= link_to user_path(comment.user.id) do %>
-                <%= image_tag comment.user.avatar.thumb.url.to_s, :size =>'60x60' %>
+                <%= image_tag comment.user.avatar.thumb.url.to_s, :size =>'60x60', class: "rounded-circle" %>
               <% end %>
-              <br><small><%= link_to "#{comment.user.nick_name}", user_path(comment.user.id) %></small>
             </div>
           </div>
-          <div class ="col-md-10">
+          <div class ="col-md-8">
             <div><%= simple_format comment.comment %>
             </div>
           </div>
         </div>
       <% if comment.user == current_user %>
         <div class="row">
-          <div class ="col-md">
+          <div class ="col-md-2 text-center">
             <p><%= link_to '削除', post_post_comment_path(comment.post_id, comment.id), method: :delete, remote: true, class: "btn btn-outline-danger btn-sm" %>
             </p>
           </div>
@@ -35,14 +35,18 @@
     </div>
 
     <% if user_signed_in? %>
-      <%= form_with(model: [comment.post, comment, comment.replies.build] ) do |f| %>
-        <div>
-          <%= f.text_area :comment, class: "form-control", placeholder: "返信をここに" %>
+      <div class="row">
+        <div class ="col-md-8 offset-md-4">
+          <%= form_with(model: [comment.post, comment, comment.replies.build] ) do |f| %>
+            <div>
+              <%= f.text_area :comment, class: "form-control", placeholder: "返信をここに" %>
+            </div>
+            <div class="actions text-right">
+              <%= f.submit "送信", class: "btn btn-info md-10" %>
+            </div>
+          <% end %>
         </div>
-        <div class="actions text-right">
-          <%= f.submit "送信", class: "btn btn-info md-10" %>
-        </div>
-      <% end %>
+      </div>
     <% end %>
 
   <% end %>
