--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,17 +1,20 @@
 <div class="container-fluid">
     <div class="row">
       <div class ="col-md text-center">
-        <h2 class=>投稿フォーム</h2>
+        <h1 class><strong>投稿フォーム</strong></h1>
       </div>
       </div>
     <div class="row">
       <div class ="col-md-10 offset-md-1">
-        <%= form_with model:@post do |f| %>
+        <%= form_with(model:@post, local: true) do |f| %>
+
+        <%= render "devise/shared/error_messages", resource: @post %>
 
             <div class="form-group">
-                <%= f.label :title, '投稿タイトル（必須）' %><br>
+              <%= f.label :title, '投稿タイトル（必須）' %><br>
                 <small id="title-tip" class="form-text text-muted">
-                    [改行不可]作品名を入力してください！
+                    作品名を入力してください！<br>
+                    【 改行不可：1〜50字以内 】
                 </small>
                 <%= f.text_field :title, class: "form-control" %>
 
@@ -19,7 +22,8 @@
             <div class="form-group">
                 <%= f.label :subtitle, 'サブタイトル（必須）' %><br>
                 <small id="subtitle-tip" class="form-text text-muted">
-                    [改行不可]作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです 等）
+                  作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです）<br>
+                  【 改行不可：5〜80字以内 】
                 </small>
                 <%= f.text_area :subtitle, class: "form-control" %>
             </div>
@@ -33,9 +37,10 @@
             <div class="form-group">
                 <%= f.label :body, '投稿内容（必須）' %><br>
                 <small id="body-tip" class="form-text text-muted">
-                    作品について自由にアピールしてください！！（例：背景・思い/どのような作品か/苦労したこと　等）
+                    作品について自由にアピールしてください！！（例：背景・思い/どのような作品か/苦労したこと　等）<br>
+                    【 20字以上 】
                 </small>
-                <%= f.text_area :body, class: "form-control", rows:20 %>
+                <%= f.text_area :body, class: "form-control", rows:10 %>
             </div>
             <div class="form-group">
                 <%= f.label :portfolio_url, '作品URL' %><br>
@@ -54,20 +59,22 @@
             <div class="form-group">
                 <%= f.label :message, '一言メッセージ' %><br>
                 <small id="message-tip" class="form-text text-muted">
-                    一言メッセージを入力してください！（例：質問、アドバイスお願いします！/作品について語り合いましょう！　等）
+                    一言メッセージを入力してください！（例：質問、アドバイスお願いします！/作品について語り合いましょう！　等）<br>
+                    【 200字以内 】
                 </small>
                 <%= f.text_area :message, class: "form-control" %>
             </div>
             <div class="form-group">
                 <%= f.label :development_environment_text, '開発環境' %><br>
                 <small id="development_environment_text-tip" class="form-text text-muted">
-                    開発環境を入力してください！(例：Ruby 2.5.7/Rails 5.2.4.4　等)
+                    開発環境を入力してください！(例：Ruby 2.5.7/Rails 5.2.4.4　等)<br>
+                    【 800字以内 】
                 </small>
                 <%= f.text_area :development_environment_text, class: "form-control" %>
             </div>
 
-            <h6>必須項目に漏れや誤字脱字はありませんか？投稿内容に間違いがないか最終確認が済みましたら 投稿ボタンを押しましょう</h6>
-            <%= f.submit '投稿', class: "btn btn-info btn-block" %>
+            <h6>必須項目の未記入や誤字脱字はありませんか？最終確認後に新規投稿ボタンを押しましょう</h6>
+            <%= f.submit '新規投稿', class: "btn btn-info btn-block" %>
 
         <% end %>
       </div>
