--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #111F4D">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom">
           <%= link_to "E.G.C.", root_path, class: "navbar-brand  mb-0 h1" %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -62,10 +62,12 @@
 
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  ゲスト
+                  ログインしていません
                   </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+                      <%= link_to '新規登録(無料)', new_user_registration_path, class: "nav-link" %>
+                      <%= link_to 'ログイン', new_user_session_path, class: "nav-link" %>
+
                     </div>
                 </li>
 
