--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,58 +1,52 @@
-    <div class="form-group">
-        <%= f.label :title, '投稿タイトル（必須）' %><br>
-        <small id="title-tip" class="form-text text-muted">
-            [改行不可]作品名を入力してください！
-        </small>
-        <%= f.text_field :title, class: "form-control" %>
+<% posts.each_slice(3) do |three_posts| %>
 
-    </div>
-    <div class="form-group">
-        <%= f.label :subtitle, 'サブタイトル（必須）' %><br>
-        <small id="subtitle-tip" class="form-text text-muted">
-            [改行不可]作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです）
-        </small>
-        <%= f.text_area :subtitle, class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.label :post_image, '作品画像（必須）' %><br>
-        <small id="post_image-tip" class="form-text text-muted">
-            渾身の一枚をアップロードしてください！！
-        </small>
-        <%= f.file_field :post_image %>
-    </div>
-    <div class="form-group">
-        <%= f.label :body, '投稿内容（必須）' %><br>
-        <small id="body-tip" class="form-text text-muted">
-            作品について自由にアピールしてください！！（例：背景・思い/どのような作品か/苦労したこと　等）
-        </small>
-        <%= f.text_area :body, class: "form-control", rows:10 %>
-    </div>
-    <div class="form-group">
-        <%= f.label :portfolio_url, '作品URL' %><br>
-        <small id="portfolio_url-tip" class="form-text text-muted">
-            作品のURLを公開してください！ (例：https://xxx.xx...)
-        </small>
-        <%= f.text_field :portfolio_url, class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.label :source_code_url, 'ソースコードURL GitHubのリポジトリURL 等' %><br>
-        <small id="source_code_url-tip" class="form-text text-muted">
-            ソースコードが確認できるURLを公開してください！（例：https://github.com/xxxx　等）
-        </small>
-        <%= f.text_field :source_code_url, class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.label :message, '一言メッセージ' %><br>
-        <small id="message-tip" class="form-text text-muted">
-            一言メッセージを入力してください！（例：質問、アドバイスお願いします！/作品について語り合いましょう！　等）
-        </small>
-        <%= f.text_area :message, class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.label :development_environment_text, '開発環境' %><br>
-        <small id="development_environment_text-tip" class="form-text text-muted">
-            開発環境を入力してください！(例：Ruby 2.5.7/Rails 5.2.4.4　等)
-        </small>
-        <%= f.text_area :development_environment_text, class: "form-control" %>
-    </div>
-
+  <div class="row">
+    <% three_posts.each do |post| %>
+      <div class="col-sm-4">
+        <div class="card-deck card-deck-height">
+          <div class="index-centense">
+            <div class="card border-dark h-100" style="width: 20rem;">
+              <%= link_to post_path(post.id) do %>
+              <%= image_tag post.post_image.thumb.url.to_s, class: "card-img-top", width: "100%",  height: "180" %>
+              <% end %>
+              <div class="card-body text-dark">
+                <h6><strong class="card-title"><%= post.title %></strong></h6>
+                <div class="card-text"><%= post.subtitle %><br>
+                  <% if user_signed_in? %>
+                    <% if post.favorited_by?(current_user) %>
+                      <%= link_to post_favorites_path(post), method: :delete do %>
+                        <i class="fas fa-heart heart-red"></i>
+                      <% end %>
+                    <% else %>
+                      <%= link_to post_favorites_path(post), method: :post do %>
+                        <i class="fas fa-heart heart-white"></i>
+                      <% end %>
+                    <% end %>
+                  <% else %>
+                    <i class="fas fa-heart heart-white"></i>
+                    <small>(いいねにはログインが必要です)</small>
+                  <% end %>
+                    <%= post.favorites.count %>
+                    <i class="fas fa-comment-dots"></i>
+                      <%= post.post_comments.count %>
+                </div>
+                <div class="card-text">
+                    <%= link_to user_path(post.user) do %>
+                      <%= image_tag post.user.avatar.thumb.url.to_s, :size =>'35x35' ,class: "rounded-circle"%>
+                    <% end %>
+                    <small><%= post.user.nick_name %></small>
+                </div>
+              </div>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item">
+                    <%= link_to "作品を見に行く", post_path(post.id), class: "btn btn-outline-info btn-sm" %><br>
+                    <small class="text-muted">投稿日時：<%= l post.created_at %></small>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+<% end %>
