--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -2,7 +2,7 @@
   <div class="container-fluid">
 
     <div class="about-main-title">
-      <h1><strong>E.G.C.とは？</strong></h1>
+      <h1>E.G.C.とは？</h1>
     </div>
     <div class="about-title-body">
       <p>E.G.C. は、開発エンジニアの卵が「自他共に楽しみながら成長していくこと」を応援するサイトです。<br>
@@ -12,92 +12,99 @@
       </p>
     </div>
     <div class="row">
-      <div class="col-md text-center">
+      <div class="col-md-10 offset-md-1">
         <div class="about-subtitle">
           <h4>サイト名の由来[頭文字]</h4>
         </div>
         <div class="about-body">
           <div class="row">
             <div class ="col-md-4">
-              <h4>enjoy</h4>
-                <p><small>「こんなこと質問していいのかな..質問が怖い...」</small></p>
-                <p>最初は誰もが初めてです。<br>
-                  質問や会話を恐れず、あなたと同じ志を持つ投稿者に<br>
-                  気軽に質問やコメントをしてみましょう。<br>
-                  成長を楽しみましょう！
-                  </p>
+               <h4>enjoy</h4>
+                <p>
+                  <small>「眠ったままのポートフォリオ..誰かからの反応が欲しい...」<br>
+                  「サービスとして公開できるようなレベルじゃないし...」</small>
+                </p>
+                <p>どんなレベルだっていいんです。<br>
+                  あなたの努力(作品)を紹介してください！<br>
+                  「いいね」や「コメント」の反応は <br>
+                  自信やモチベーションに繋がるはず。
+                </p>
+                <p>成長を楽しみましょう！！</p>
             </div>
             <div class ="col-md-4">
               <h4>grow</h4>
-                <p><small>どんなデザインや機能のポートフォリオを作ろうかな...</small></p>
-                <p>みんなの作品がインスピレーションのきっかけになるかも！<br>
-                  また、投稿作品で気になる機能の実装方法について、<br>
-                  制作者にコメント質問ができます。<br>
-                  技術を高めていきましょう！
+                <p><small>「どんなデザイン/機能のポートフォリオを作ろうかな...」</small></p>
+                <p>デザインや機能について 等、<br>
+                  閲覧、コメントや質問はインスピレーションや技術向上に繋がるかも。
                 </p>
+                <p>E G.C.を通じて成長しましょう！！</p>
             </div>
             <div class ="col-md-4">
                 <h4>communication</h4>
-                  <p>いいね！やコメント・返信より自作品への反応を知ることで<br>
-                    自信、モチベーションや改善に繋げましょう！<br>
+                  <p><small>「開発エンジニアを目指す仲間と話をしてみたいな...」</small></p>
+                  <p>「いいね！」「コメント」「返信」で<br>
+                    横の繋がりを作るきっかけになるかも！
                   </p>
+                  <p>"気軽に"コミュニケーションをとりましょう！</p>
             </div>
           </div>
-      </div>
+        </div>
       </div>
     </div>
-        <div class="about-title">
-          <h2><strong>E.G.C.の使い方</strong></h2>
+
+    <div class="about-title">
+      <h2>E.G.C.の使い方</h2>
+    </div>
+      <div class="about-centence">
+        <div class="about-subtitle">
+          <h4>1. 作品を見てみよう</h4>
         </div>
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>1. 作品を見てみよう</h4>
-            </div>
-            <div class="about-body">
-              <p>みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
-                インスピレーションのきっかけになることも。
-              </p>
-              <p>＊ログインがお済みでない場合は、作品一覧の閲覧のみ可能です
-              </p>
-            </div>
+        <div class="about-body">
+          <p>みんながどのようなポートフォリオを作成しているか見てみましょう。<br>
+            インスピレーションのきっかけになることも。
+          </p>
+          <p><small>＊ ログインしていない場合は、作品一覧の閲覧のみご利用が可能です
+          </small></p>
+        </div>
+      </div>
+      <div class="about-centence">
+        <div class="about-subtitle">
+          <h4>2. 作品を投稿する</h4>
           </div>
+          <div class="about-body">
+            <p>E.G.C.アカウントを作成し、作品について自由にアピール！<br>
+              作品について、過程、背景や思い等を投稿し、作品とあなたのことを知ってもらいましょう！！
+            </p>
+        </div>
+      </div>
+      <div class="about-centence">
+        <div class="about-subtitle">
+          <h4>3. 作品に反応する</h4>
+        </div>
+        <div class="about-body">
+          <p>「いいね」をしましょう！<br>
+            「いいね!」がモチベーションアップに繋がります。<br>
+          </p>
+        </div>
+      </div>
+      <div class="about-centence">
+        <div class="about-subtitle">
+          <h4>4. 作品を通して繋がろう</h4>
+        </div>
+        <div class="about-body">
+          <p>作品について、気軽に質問・コメント・感想 等を送りましょう！<br>
+            楽しく成長しましょう！<br>
+            <small>
+              ＊コメントや返信があった際は、「コメントは投稿者へ」「返信はコメントをした人へ」メールで通知されます。
+            </small>
+          </p>
+        </div>
+      </div>
 
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>2. 作品を投稿する</h4>
-              </div>
-              <div class="about-body">
-                <p>E.G.C.アカウントを作成し、作品について自由にアピールしてください！！<br>
-                  作品について、　過程、背景や思い等を書いて、作品とあなたのことを知ってもらいましょう。
-                </p>
-            </div>
-          </div>
-
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>3. 作品に反応する</h4>
-            </div>
-            <div class="about-body">
-              <p>「いいね」をしましょう！<br>
-                「いいね!」がモチベーションアップに繋がります。<br>
-              </p>
-            </div>
-          </div>
-
-          <div class="about-centence">
-            <div class="about-subtitle">
-              <h4>4. 作品を通して繋がろう</h4>
-            </div>
-            <div class="about-body">
-              <p>作品について、気軽に質問・コメント・感想 等を送って<br>
-                楽しく成長しましょう！<br>
-                <small>
-                  ＊コメントや返信があった際は、「コメントは投稿者へ」「返信はコメントをした人へ」メールで通知されます。
-                </small>
-              </p>
-            </div>
-          </div>
-
-
+    <div class="row">
+      <div class="col-md text-center">
+        <%= link_to '作品を見てみる！！', posts_path, class: "btn btn-info btn-lg" %>
+      </div>
+    </div>
    </div>
 </div>
