--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -25,7 +25,7 @@
             <%= link_to 'ログイン', new_user_session_path, class: "btn btn-outline-success btn-lg" %></P>
           <% end %>
           <P><%= link_to 'とりあえず作品を見てみる', posts_path, class: "btn btn-outline-info btn-lg" %><br>
-          <small>※ コメントや投稿は新規登録(無料) またはログインが必要です</small>
+          <small>※ ログインしていない場合は、作品一覧の閲覧のみご利用が可能です</small>
           </P>
         </div>
       </div>
