--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@ body {
   padding-bottom: 80px;
   box-sizing: border-box;
   color: #e0e0e0;
+    background-color:rgba(0,0,0,0.8);
 }
 
 .container-fluid {
@@ -65,7 +66,7 @@ body {
 
 .title {
   color: #57B8D9;
-  padding-top: 2%;
+  padding-top: 3%;
   padding-bottom: 3%;
 }
 
@@ -73,6 +74,14 @@ body {
   color: #57B8D9;
   padding-top: 2%;
   padding-bottom: 3%;
+}
+
+.cover {
+  padding: 15px;
+  margin: 0px 5px 5px 30px;
+  background-color: rgba(0,0,0,0.3);
+  border: 2px solid #e7e7e7;
+  box-shadow: 0 0 5px #999;
 }
 
 .post-main-cover {
@@ -91,6 +100,10 @@ body {
   margin: 10px 0px;
   padding: 8px 2px 2px 8px;
   border: 1px dashed #5f5f5f;
+}
+
+.error {
+  color: red;
 }
 
 footer {
