--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,81 +1,82 @@
-<div class="container">
+<div class="container-fluid">
   <div class = "row">
     <div class ="col-md-6 offset-md-3 text-center">
-      <h4>新規登録</h4>
+      <h2>新規登録</h2>
     </div>
   </div>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <div class = "row">
+      <div class ="col-md-4 offset-md-5">
+        <%= render "devise/shared/error_messages", resource: resource %>
+      </div>
+    </div>
+    <div class="field">
+      <div class = "row">
+        <div class ="col-md-1 offset-md-3 text-right">
+          <i class="fas fa-user fa-2x"></i>
+        </div>
+        <div class ="col-md-5">
+          <%= f.text_field :name, class: "form-control", autofocus: true, placeholder:"氏名", autocomplete: "name" %>
+        </div>
+      </div>
+    </div>
 
-      <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field">
+      <div class = "row">
+        <div class ="col-md-1 offset-md-3 text-right">
+          <i class="fas fa-paw fa-2x"></i>
+        </div>
+        <div class ="col-md-5">
+          <%= f.text_field :nick_name, class: "form-control", placeholder:"ニックネーム", autocomplete: "nick_name" %>
+        </div>
+      </div>
+    </div>
 
-      <div class="field">
-        <div class = "row">
-          <div class ="col-md-1 offset-md-3 text-right">
-            <i class="fas fa-user fa-lg"></i>
-          </div>
-          <div class ="col-md-5">
-            <%= f.text_field :name, class: "form-control", autofocus: true, placeholder:"氏名", autocomplete: "name" %>
+    <div class="field">
+      <div class = "row">
+        <div class ="col-md-1 offset-md-3 text-right">
+          <i class="fas fa-envelope fa-2x"></i>
+        </div>
+        <div class ="col-md-5">
+          <%= f.email_field :email, class: "form-control", placeholder:"Eメール", autocomplete: "email" %>
+        </div>
+      </div>
+    </div>
+
+    <div class="field">
+      <div class = "row">
+        <div class ="col-md-1 offset-md-3 text-right">
+          <i class="fas fa-lock fa-2x"></i>
+        </div>
+        <div class ="col-md-5">
+            <% if @minimum_password_length %>
+            <% end %>
+            <%= f.password_field :password, class: "form-control", placeholder:"パスワード(6文字以上)", autocomplete: "new-password" %>
           </div>
         </div>
       </div>
 
-      <div class="field">
-        <div class = "row">
-          <div class ="col-md-1 offset-md-3 text-right">
-            <h5 class="fas fa-paw"></h5>
-          </div>
-          <div class ="col-md-5">
-            <%= f.text_field :nick_name, class: "form-control", placeholder:"ニックネーム", autocomplete: "nick_name" %>
-          </div>
+    <div class="field">
+      <div class = "row">
+        <div class ="col-md-1 offset-md-3 text-right">
+          <i class="fas fa-lock fa-2x"></i>
+        </div>
+        <div class ="col-md-5">
+          <%= f.password_field :password_confirmation, class: "form-control", placeholder:"パスワード確認", autocomplete: "new-password" %>
         </div>
       </div>
+    </div>
 
-      <div class="field">
-        <div class = "row">
-          <div class ="col-md-1 offset-md-3 text-right">
-            <h5 class="fas fa-envelope"></h5>
-          </div>
-          <div class ="col-md-5">
-            <%= f.email_field :email, class: "form-control", placeholder:"Eメール", autocomplete: "email" %>
-          </div>
+    <div class = "row">
+      <div class ="col-md-5 offset-md-4 ">
+        <div class="actions">
+          <%= f.submit class: "btn btn-info btn-block" %>
         </div>
       </div>
+    </div>
 
-      <div class="field">
-        <div class = "row">
-          <div class ="col-md-1 offset-md-3 text-right">
-            <h5 class="fas fa-lock"></h5>
-          </div>
-          <div class ="col-md-5">
-              <% if @minimum_password_length %>
-              <% end %>
-              <%= f.password_field :password, class: "form-control", placeholder:"パスワード(6文字以上)", autocomplete: "new-password" %>
-            </div>
-          </div>
-        </div>
-
-        <div class="field">
-          <div class = "row">
-            <div class ="col-md-1 offset-md-3 text-right">
-              <h5 class="fas fa-lock"></h5>
-            </div>
-            <div class ="col-md-5">
-              <%= f.password_field :password_confirmation, class: "form-control", placeholder:"パスワード確認", autocomplete: "new-password" %>
-            </div>
-          </div>
-        </div>
-
-    <!--新規登録ボタン-->
-        <div class = "row">
-          <div class ="col-md-5 offset-md-4 ">
-            <div class="actions">
-              <%= f.submit "新規登録",class: "btn btn-primary btn-block" %>
-            </div>
-          </div>
-        </div>
-
-    <% end %>
+  <% end %>
 
   <div class = "row">
     <div class ="col-md-5 offset-md-4 text-center">
