--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -28,7 +28,7 @@
             <div class ="col-md">
               <h2><strong><%= @post.title %></strong></h2>
               <h4><%= @post.subtitle %></h4>
-              <%= image_tag @post.post_image.thumb.url.to_s, :size =>'896x560' %>
+              <%= image_tag @post.post_image.thumb.url.to_s, width: "100%" %>
             </div>
           </div>
 
