--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -14,7 +14,7 @@
               <%= f.label :title, '投稿タイトル（必須）' %><br>
                 <small id="title-tip" class="form-text text-muted">
                     作品名を入力してください！<br>
-                    【 改行不可：1〜50字以内 】
+                    【 改行不可：1〜50文字以内 】
                 </small>
                 <%= f.text_field :title, class: "form-control" %>
 
@@ -23,7 +23,7 @@
                 <%= f.label :subtitle, 'サブタイトル（必須）' %><br>
                 <small id="subtitle-tip" class="form-text text-muted">
                   作品テーマを入力してください！（例：ポートフォリオを紹介するWebサイトです）<br>
-                  【 改行不可：5〜80字以内 】
+                  【 改行不可：5〜80文字以内 】
                 </small>
                 <%= f.text_area :subtitle, class: "form-control" %>
             </div>
@@ -38,9 +38,9 @@
                 <%= f.label :body, '投稿内容（必須）' %><br>
                 <small id="body-tip" class="form-text text-muted">
                     作品について自由にアピールしてください！！（例：背景・思い/どのような作品か/苦労したこと　等）<br>
-                    【 20字以上 】
+                    【 20文字以上 】
                 </small>
-                <%= f.text_area :body, class: "form-control", rows:10 %>
+                <%= f.text_area :body, class: "form-control", rows:20 %>
             </div>
             <div class="form-group">
                 <%= f.label :portfolio_url, '作品URL' %><br>
@@ -60,17 +60,17 @@
                 <%= f.label :message, '一言メッセージ' %><br>
                 <small id="message-tip" class="form-text text-muted">
                     一言メッセージを入力してください！（例：質問、アドバイスお願いします！/作品について語り合いましょう！　等）<br>
-                    【 200字以内 】
+                    【 200文字以内 】
                 </small>
-                <%= f.text_area :message, class: "form-control" %>
+                <%= f.text_area :message, class: "form-control", rows:5 %>
             </div>
             <div class="form-group">
                 <%= f.label :development_environment_text, '開発環境' %><br>
                 <small id="development_environment_text-tip" class="form-text text-muted">
                     開発環境を入力してください！(例：Ruby 2.5.7/Rails 5.2.4.4　等)<br>
-                    【 800字以内 】
+                    【 800文字以内 】
                 </small>
-                <%= f.text_area :development_environment_text, class: "form-control" %>
+                <%= f.text_area :development_environment_text, class: "form-control", rows:5 %>
             </div>
 
             <h6>必須項目の未記入や誤字脱字はありませんか？最終確認後に新規投稿ボタンを押しましょう</h6>
