--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,7 +16,7 @@
         <div class="form-group">
           <%= f.label :ニックネーム %>
             <small class="form-text text-muted">
-              【 1〜15字以内 】
+              【 1〜15文字以内 】
             </small>
           <%= f.text_field :nick_name, class:"form-control" %>
         </div>
@@ -28,7 +28,7 @@
         <div class="form-group">
           <%= f.label :introduction, '自己紹介' %><br>
             <small class="form-text text-muted">
-              【 600字以内 】
+              【 600文字以内 】
             </small>
           <%= f.text_area :introduction, class:"form-control", rows:"16" %>
         </div>
